<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/white">


    <!--刚开始展示的布局-->
    <LinearLayout
        android:id="@+id/linear_show"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/book_img"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@mipmap/default_pic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/book_img"
            android:gravity="center_vertical">



            <TextView
                android:id="@+id/book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="书名"
                android:textColor="@color/book_name_black"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tv_chaptersava"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/book_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/book_name"
                android:text="作者"
                android:textColor="@color/foot_unchecked"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/book_publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/book_author"
                android:layout_marginTop="20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="时间"
                android:textColor="@color/foot_unchecked"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <!--刚开始隐藏的布局-->
    <LinearLayout
        android:id="@+id/linear_hidden"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/linear_detail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/book_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_detail"
                android:textColor="@color/blue"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/detail"
                android:textColor="@color/blue"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_cache"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/book_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_download"
                android:textColor="@color/blue"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cache"
                android:textColor="@color/blue"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_top"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/book_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/icon_top"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/top"
                android:textColor="@color/blue"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/book_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_delete_bucket"
                android:textColor="@color/blue"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/delete"
                android:textColor="@color/red"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentBottom="true"
        android:background="@color/divide" />
</RelativeLayout>