<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/divide"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_boy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/boy_search"
                    android:textColor="@color/book_name_black"
                    android:textSize="18sp" />

                <com.syezon.reader.widget.NoScrollGridView
                    android:id="@+id/grid_boy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:numColumns="3" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/girl_search"
                    android:textColor="@color/book_name_black"
                    android:textSize="18sp" />

                <com.syezon.reader.widget.NoScrollGridView
                    android:id="@+id/grid_girl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:numColumns="3" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/editor_recommend"
                    android:textColor="@color/book_name_black"
                    android:textSize="18sp" />

                <com.syezon.reader.widget.NoScrollGridView
                    android:id="@+id/grid_editor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:numColumns="3" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>